--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "cloudinary": "^2.8.0",
+    "drizzle-kit": "^0.31.7",
+    "drizzle-orm": "^0.44.7",
     "next": "^14.2.33",
+    "postgres": "^3.4.7",
     "react": "latest",
     "react-dom": "latest"
   },
